// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText default 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
/>
`;

exports[`InputText should accept disabled 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
  disabled={true}
/>
`;

exports[`InputText should accept readOnly 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
  readOnly={true}
/>
`;

exports[`InputText should accept required 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
  required={true}
/>
`;

exports[`InputText with a placeholder 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
/>
`;

exports[`InputText with a value 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
  value="Some value"
/>
`;

exports[`InputText with an error validation 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
/>
`;

exports[`InputText with aria-describedby 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  aria-describedby="some-id"
  className="c0"
/>
`;

exports[`InputText with name and id 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

<input
  className="c0"
  id="Bobby"
  name="Bob"
/>
`;
